<resources>
    <string name="app_name">Movie Channel</string>
    <string name="action">Action</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all">See All</string>
    <string name="title">title</string>
    <string name="drama">Drama</string>
    <string name="release_year">2016</string>
    <string name="duration">2h 13min</string>
    <string name="watch_movie">Watch Movie</string>
    <string name="download">DOWNLOAD</string>
    <string name="english">English</string>
    <string name="choose_movie_quality">Choose Movie Quality</string>
    <string name="movie_review">Movie Review</string>
    <string name="change_font">&lt; Change Font &gt;</string>
    <string name="most_view">Most View</string>
    <string name="most_download">Most Download</string>
    <string name="top_rating">Top Rating</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="config"><font color="#FFC5BFBF">Config</font></string>
    <string name="setting">Setting</string>
    <string name="categories"><font color="#FFC5BFBF">Categories</font></string>
    <string name="search">Search</string>
    <string name="bookmark">Bookmark</string>
    <string name="animation">Animation</string>
    <string name="web_client_id">152173852978-uieqih4e22nlhno2e9k3tbf0ahrasbhd.apps.googleusercontent.com</string>
</resources>