<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    android:background="#dd000000"
    tools:context=".ui.activity.SingleMovieDetail">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/coverImage"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:background="@drawable/imageview_background"
        android:scaleType="fitXY"
        android:src="@drawable/spiderman_homecoming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/releaseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/release_year_background"
        android:padding="5dp"
        android:text="@string/release_year"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/coverImage"
        app:layout_constraintStart_toStartOf="@id/coverImage" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/coverImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coverImage"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="The Titanic bla bla bla"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tag1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:background="@drawable/tag_background"
                android:padding="8dp"
                android:text="Action"
                android:textColor="@color/colorWhite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@drawable/tag_background"
                android:padding="8dp"
                android:text="Action"
                android:textColor="@color/colorWhite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tag3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@drawable/tag_background"
                android:padding="8dp"
                android:text="Action"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_access_time"
                app:tint="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/movieDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/duration"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_download"
                    app:tint="@color/colorPrimary" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movieDownload"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:text="80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_view"
                    android:scaleType="fitXY"
                    app:tint="@color/colorPrimary"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/movieViewer"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:text="253"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_watch"
        app:layout_constraintTop_toBottomOf="@id/coverImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:background="@drawable/download_background"
            android:gravity="center_vertical"
            android:text="@string/watch_movie"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" >
            <androidx.appcompat.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_play_movie"
                android:layout_marginStart="5dp"
                android:layout_width="25dp"
                app:tint="@color/colorWhite"
                android:layout_height="25dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_movie"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:background="@drawable/videoview_background"
            android:gravity="center_vertical"
            android:text="@string/watch_movie"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" >
            <androidx.appcompat.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_download"
                android:layout_marginStart="5dp"
                android:layout_width="25dp"
                app:tint="@color/colorWhite"
                android:layout_height="25dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/movieDescription"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:text="Description"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_watch"
        android:layout_height="wrap_content">

    </com.google.android.material.textview.MaterialTextView>
</androidx.constraintlayout.widget.ConstraintLayout>